--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@radix-ui/react-separator": "^1.1.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^16.5.0",
     "framer-motion": "^12.9.2",
     "lucide-react": "^0.503.0",
+    "mongoose": "^8.14.1",
     "next": "14.2.26",
     "react": "^18",
     "react-dom": "^18",
