--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.11",
     "@radix-ui/react-separator": "^1.1.4",
+    "@radix-ui/react-slot": "^1.2.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.5.0",
@@ -18,6 +19,7 @@
     "lucide-react": "^0.503.0",
     "mongoose": "^8.14.1",
     "next": "14.2.26",
+    "next-themes": "^0.4.6",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.5.0",
