--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-# Email Configuration (Nodemailer)
+﻿# Email Configuration (Nodemailer)
 # SMTP Server Settings
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
@@ -10,7 +10,5 @@ SMTP_FROM=your-email@gmail.com
 # Contact Email (where you want to receive contact form messages)
 CONTACT_EMAIL=your-email@gmail.com
 
-
-
-MONGODB_URI=mongodb+srv://next_port:laOUUtM5gG7R5151@cluster0.yervfsu.mongodb.net/Port-1
-
+# MongoDB Configuration (if needed)
+# MONGODB_URI=your-mongodb-connection-string
