--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-slot": "^1.2.2",
     "@react-three/drei": "^9.56.11",
     "@react-three/fiber": "^8.18.0",
+    "@types/nodemailer": "^7.0.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.5.0",
@@ -22,6 +23,7 @@
     "mongoose": "^8.14.1",
     "next": "14.2.26",
     "next-themes": "^0.4.6",
+    "nodemailer": "^7.0.12",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.5.0",
